--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,15 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 
     <title>Document</title>
 </head>
+
 <body>
     <h1 class="head">Player: <span class="player">X</span></h1>
     <section class="board">
@@ -33,6 +37,7 @@
     <button class="rest-btn">Restart</button>
 
 
-    <script src="script.js" ></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
